5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4072/executions/1578_2896.log
== SUBMITION (2019-03-12 14:35:21) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(Larissa)

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.134953
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/2896/main.py", line 4, in <module>
    var = input(Larissa)
NameError: name 'Larissa' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 14:35:50) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(ufam
			 )

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(ufam
NameError: name 'ufam' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 14:36:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(ufam
			 )

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(ufam
NameError: name 'ufam' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 15:04:58) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = 

# Impressao de saidas
print()
-- ERROR:
File "XXXX", line 4
    var = 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 15:55:17) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.135153
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
